Changed structure of backend for Comments